<resources>
    <string name="app_name">Ikiam</string>
    <string name="menu_title">Ikiam</string>
    <string name="help_help">Ayuda</string>
    <string name="help_map">
       La pantalla mapa muestra la ubicación geográfica del usuario y de las fotos tomadas dentro de la aplicación.\n
       Botones:\n
       Galapagos: reubica el mapa de tal forma que enfoque a las Islas Galapagos.\n
       Nueva Ruta: la aplicación empezará a monitorear la posición geográfica del usuario y la actividad de la cámara de fotos para mostrarlas en el mapa.\n
       Cámara: abre la aplicación de la cámara de fotos.\n
       Atracciones: descarga del servidor Ikiam las principales atracciones turísticas del Ecuador.\n
       Especies: descarga del servidor Ikiam las principales especies del Ecuador.\n
       Brújula: abre una ventana con información de la posición actual del usuario y una brújula.\n
       Tipo: cambia el tipo de terreno que se muestra en el mapa.\n
       Limipiar: borrar todos los marcadores y fotos del mapa.
    </string>
    <string name="help_captura_turista">
        La pantalla de captura permite tomar una foto o seleccionar una de la galería, agregar comentarios y guardarla.\n
        Si el usuario está registrado puede subir la foto al servidor de Ikiam y así compartirla con otros usuarios.\n
        La foto guardada se puede ver en el área de Galería o en un mapa con las fotos del usuario (botón de usuario en a barra superior)
    </string>
    <string name="help_captura">
        La pantalla de captura permite al usuario registrado como cientifico ingresar una nueva especie o agregar fotos a una existente.\n
        Puede usar la cámara para hacer una nueva captura o seleccionar una foto de la galería.\n
        Una vez seleccionada la foto debe completar la información de la especie utilizando el formulario. En primer lugar
        el tipo de especie (planta o animal, y en el caso de planta, seleccionar las partes de la planta visibles en la foto).
        A continuación los nombres de la familia, género y especie. En estos campos, al comenzar a escribir se mostrará una lista
        con posibles coincidencias ya insertadas en la enciclopedia. Si se completa el nombre común de una especie ya existente se
        completará automáticamente la familia, el género y la especie. Si se completan los últimos 3 datos de una especie existente
        se completará el nombre común.\n
        La foto puede ser guardada localmente o enviada también al servidor Ikiam, donde pasará a alimentar la enciclopedia.\n
        Una vez guardada puede ser visualizada en el área de enciclopedia.
    </string>
    <string name="help_enciclopedia">
        La pantalla de enciclopedia muestra las especies que se encuentran el dispositivo móvil. Puede descargar especies adicionales
        desde el área Ikiam Web. La enciclopedia está organizada con una serie de paneles que se contraen por niveles.
        En el primer nivel se muestran las familias, para cada una sus géneros, y para cada uno sus especies. Al hacer clic en
        la especie se muestra una pantalla con la información y hasta 6 fotos descargadas del servidor.
    </string>
    <string name="help_galeria">
        La galería muestra las fotos tomadas por el usuario. Para cada foto se muestra el comentario ingresado. Si el usuario
        está registrado, puede compartir la foto en Facebook y en el servidor de Ikiam.
    </string>
    <string name="help_rutas">Ayuda rutas</string>
    <string name="help_configuracion">Ayuda configuracion</string>
    <string name="help_login">Ayuda login</string>
    <string name="help_busqueda">Ayuda búsqueda</string>
    <string name="help_tools">Ayuda tools</string>
    <string name="help_ikiam_web">Ayuda ikiam</string>
    <string name="help_notepad">Ayuda notas</string>
    <string name="help_scanner">help scanner</string>
    <string name="global_yes">Sí</string>
    <string name="global_no">No</string>
    <string name="global_ok">Aceptar</string>
    <string name="global_save">Guardar</string>
    <string name="global_upload">Guardar y enviar al servidor</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_placeHolder">placeHolder</string>
    <string name="global_min">min.</string>
    <string name="global_max">max.</string>
    <string name="global_color_none">-Ninguno-</string>
    <string name="global_color_azul">Azul</string>
    <string name="global_color_cafe">Café</string>
    <string name="global_color_verde">Verde</string>
    <string name="global_color_naranja">Naranja</string>
    <string name="global_color_rosa">Rosa</string>
    <string name="global_color_violeta">Violeta</string>
    <string name="global_color_rojo">Rojo</string>
    <string name="global_color_blanco">Blanco</string>
    <string name="global_color_amarillo">Amarillo</string>
    <string name="global_color_negro">Negro</string>
    <string name="global_error_no_connection">No se pudo conectar a Internet.</string>
    <string-array name="options_array_cientifico">
        <item>Mapa</item>
        <item>Nueva captura</item>
        <item>Enciclopedia</item>
        <item>Rutas</item>
        <item>Ikiam Web</item>
        <item>Notas</item>
        <item>Nueva nota</item>
        <item>Configuración</item>
        <item>Login</item>
        <item>Scaner</item>
    </string-array>
    <string-array name="options_array_turista">
        <item>Mapa</item>
        <item>Nueva captura</item>
        <item>Enciclopedia</item>
        <item>Galería</item>
        <item>Rutas</item>
        <item>Ikiam Web</item>
        <item>Notas</item>
        <item>Nueva nota</item>
        <item>Configuración</item>
        <item>Login</item>
        <item>Scaner</item>
    </string-array>
    <string name="drawer_open">Abrir menú de navegación</string>
    <string name="drawer_close">Cerrar menú de navegación</string>
    <string name="search_btn_label">Búsqueda</string>
    <string name="web_app_not_available">Lo siento, no hay un navegador configurado</string>
    <string name="gallery_app_not_available">Lo siento, no hay una galería configurada</string>
    <string name="camera_app_not_available">Lo siento, no hay una cámara configurada</string>
    <string name="encyclopedia_title">Enciclopedia</string>
    <string name="settings_title">Configuración</string>
    <string name="camera_title">Cámara</string>
    <string name="captura_title">Nueva captura</string>
    <string name="gallery_title">Galería</string>
    <string name="map_title">Mapa</string>
    <string name="tools_title">Herramientas</string>
    <string name="busqueda_title">Búsqueda</string>
    <string name="rutas_title">Rutas</string>
    <string name="login_title">Ingresar</string>
    <string name="ikiam_web_title">Ikiam web</string>
    <string name="logro_title">Logros</string>
    <string name="notepad_title">Notas</string>
    <string name="nota_create_title">Nueva nota</string>
    <string name="nota_edit_title">Modificar nota</string>
    <string name="especie_info_title">Info. especie</string>
    <string name="estadisticas_title">Estadísticas</string>
    <string name="gallery_choose_btn_label">Seleccionar imagen</string>
    <string name="camera_btn_label">Tomar foto</string>
    <string name="map_galapagos_btn">Galápagos</string>
    <string name="map_continente_btn">Continente</string>
    <string name="map_locate_btn">Mi ubicación</string>
    <string name="map_service">Nueva Ruta</string>
    <string name="map_subirFotoMarker">Clic en el pin para subir una foto en esta posición</string>
    <string name="map_ubicar_foto_marker">Clic en el pin para ubicar la foto aquí</string>
    <string name="map_foto_ubicada">Foto ubicada correctamente</string>
    <string name="map_nota_ubicada">Nota ubicada correctamente</string>
    <string name="map_camara">Cámara</string>
    <string name="map_especies">Especies</string>
    <string name="map_limpiar">Limpiar</string>
    <string name="captura_es_animal">Es un animal</string>
    <string name="captura_es_planta">Es una planta</string>
    <string name="captura_tiene_fruta">Se ve la fruta</string>
    <string name="captura_tiene_arbol">Se ve el árbol completo</string>
    <string name="captura_tiene_corteza">Se ve la corteza</string>
    <string name="captura_tiene_hoja">Se ven las hojas</string>
    <string name="captura_tiene_flor">Se ven las flores</string>
    <string name="buscar_buscar">Buscar fotos de especies</string>
    <string name="buscar_donde">donde se vea</string>
    <string name="buscar_es_animal">de animales</string>
    <string name="buscar_es_planta">de plantas</string>
    <string name="buscar_es_animal_y_planta">de animales y plantas</string>
    <string name="buscar_tiene_fruta">la fruta</string>
    <string name="buscar_tiene_arbol">el árbol completo</string>
    <string name="buscar_tiene_corteza">la corteza</string>
    <string name="buscar_tiene_hoja">las hojas</string>
    <string name="buscar_tiene_flor">las flores</string>
    <string name="buscar_nombre_comun">de nombre común</string>
    <string name="buscar_color">con color</string>
    <string name="captura_keyWord_animal">Animal</string>
    <string name="captura_keyWord_fruta">Fruta</string>
    <string name="captura_keyWord_arbol">Árbol</string>
    <string name="captura_keyWord_corteza">Corteza</string>
    <string name="captura_keyWord_hoja">Hojas</string>
    <string name="captura_keyWord_flor">Flores</string>
    <string name="captura_comentarios_label">Comentarios</string>
    <string name="captura_nombre_familia_label">Familia</string>
    <string name="captura_nombre_genero_label">Género</string>
    <string name="captura_nombre_especie_label">Especie</string>
    <string name="captura_nombre_comun_label">Nombre común</string>
    <string name="captura_color1_label">Color principal</string>
    <string name="captura_color2_label">Color secundario</string>
    <string name="captura_cautiverio_label">Especimen en cautiverio</string>
    <string name="captura_error_nombre_comun">Por favor, ingresa el nombre común de la especie</string>
    <string name="captura_error_nombre_familia">Por favor, ingresa la familia de la especie</string>
    <string name="captura_error_nombre_genero">Por favor, ingresa el género de la especie</string>
    <string name="captura_error_nombre_especie">Por favor, ingresa el nombre de la especie</string>
    <string name="map_activity_nuevaFoto">Nueva Foto</string>
    <string name="dialog_btn_cerrar">Cerrar</string>
    <string name="dialog_btn_borrar">Borrar</string>
    <string name="dialog_btn_descargar">Subir</string>
    <plurals name="settings_btn_upload">
        <item quantity="one">Subir 1 foto</item>
        <item quantity="other">Subir %1$d fotos</item>
    </plurals>
    <string name="settings_btn_download">Descargar info</string>
    <string name="settings_chk_achevements">Contabilizar logros</string>
    <string name="settings_reset_achievements">Reiniciar estadísticas</string>
    <string name="estadisticas_fotos_tomadas_lbl">Fotos tomadas</string>
    <string name="estadisticas_fotos_subidas_lbl">Fotos subidas</string>
    <string name="estadisticas_fotos_compartidas_lbl">Fotos compartidas</string>
    <string name="estadisticas_distancia_recorrida_lbl">Distancia recorrida</string>
    <string name="busqueda_nombre_cientifico">Nombre científico</string>
    <string name="busqueda_color">Color</string>
    <string name="busqueda_nombre_comun">Nombre común</string>
    <string name="ruta_lbl_fotos">Fotos:</string>
    <string name="encyclopedia_especie_info_ver_mapa">Ver habitat</string>
    <string name="especie_info_altura">Altitud</string>
    <string name="especie_info_altura_min">Altitud mínima</string>
    <string name="especie_info_color_lbl">Color</string>
    <string name="nota_create_title_label">Título</string>
    <string name="nota_create_contenido_label">Contenido</string>
</resources>