<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/settings_btn_upload"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_upload"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/settings_btn_download"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_download"
        android:layout_alignTop="@+id/settings_btn_upload"
        android:layout_toRightOf="@+id/settings_chk_achievements" />

    <CheckBox
        android:id="@+id/settings_chk_achievements"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_chk_achevements"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:layout_below="@+id/settings_btn_upload"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_reset_achievements"
        android:id="@id/settings_btn_reset_achievements"
        android:layout_below="@+id/settings_chk_achievements"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />
</RelativeLayout>