<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="50dp"
    android:background="@drawable/bg_paper">

    <EditText
        android:id="@+id/nota_create_title"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_create_title_label"
        android:textColor="@color/ikiam_oscuro"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nota_create_contenido"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/nota_create_contenido_label"
        android:layout_marginBottom="5dp"

        android:layout_above="@+id/nota_create_btn_save"
        android:layout_below="@+id/nota_create_title"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/nota_create_btn_save"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_save"
        android:background="@drawable/button_green"
        style="@style/ButtonText"
        android:drawableLeft="@drawable/ic_action_save"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/nota_create_btn_map"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_title"
        android:background="@drawable/button_blue"
        style="@style/ButtonText"
        android:drawableLeft="@drawable/ic_action_map"
        android:visibility="gone"

        android:layout_toLeftOf="@id/nota_create_btn_save"
        android:layout_alignParentBottom="true" />
</RelativeLayout>