<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/especie_info_relative_layout">

    <ImageView
        android:id="@+id/especie_info_imagen"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_launcher"
        android:background="@drawable/border"

        android:padding="7dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/especie_info_nombre_comun"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/busqueda_nombre_comun"
        android:textStyle="bold"

        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/especie_info_imagen" />

    <TextView
        android:id="@+id/especie_info_nombre_cientifico"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busqueda_nombre_cientifico"
        android:textStyle="italic"

        android:layout_marginLeft="25dp"
        android:layout_below="@+id/especie_info_nombre_comun"
        android:layout_toRightOf="@id/especie_info_imagen" />

    <TextView
        android:id="@+id/especie_info_familia_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_nombre_familia_label"
        android:textStyle="bold"

        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/especie_info_nombre_comun"
        android:layout_toRightOf="@id/especie_info_imagen" />

    <TextView
        android:id="@+id/especie_info_familia"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_nombre_familia_label"

        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/especie_info_familia_lbl"
        android:layout_toRightOf="@+id/especie_info_familia_lbl" />

    <TextView
        android:id="@+id/especie_info_genero_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_nombre_genero_label"
        android:textStyle="bold"

        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/especie_info_familia_lbl"
        android:layout_below="@id/especie_info_familia_lbl" />

    <TextView
        android:id="@+id/especie_info_genero"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_nombre_genero_label"

        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/especie_info_genero_lbl"
        android:layout_toRightOf="@+id/especie_info_genero_lbl" />

    <TextView
        android:id="@+id/especie_info_especie_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_nombre_especie_label"
        android:textStyle="bold"

        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/especie_info_familia_lbl"
        android:layout_below="@id/especie_info_genero_lbl" />

    <TextView
        android:id="@+id/especie_info_especie"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_nombre_especie_label"

        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/especie_info_especie_lbl"
        android:layout_toRightOf="@+id/especie_info_especie_lbl" />


    <TextView
        android:id="@+id/especie_info_color_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especie_info_color_lbl"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_below="@id/especie_info_especie_lbl" />

    <TextView
        android:id="@+id/especie_info_color1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_color1_label"

        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/especie_info_color_lbl"
        android:layout_toRightOf="@+id/especie_info_color_lbl" />

    <TextView
        android:id="@+id/especie_info_color2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captura_color2_label"

        android:layout_alignTop="@+id/especie_info_color1"
        android:layout_toRightOf="@+id/especie_info_color1" />

    <TextView
        android:id="@+id/especie_info_altura_lbl"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especie_info_altura"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_below="@id/especie_info_color_lbl" />

    <TextView
        android:id="@+id/especie_info_altura"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especie_info_altura_min"

        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/especie_info_altura_lbl"
        android:layout_toRightOf="@+id/especie_info_altura_lbl" />

    <TextView
        android:id="@+id/especie_info_fotos"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruta_lbl_fotos"
        android:textStyle="bold"

        android:layout_marginTop="10dp"
        android:layout_below="@+id/especie_info_altura_lbl" />

    <ImageView
        android:id="@+id/especie_info_foto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/border"
        android:padding="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/especie_info_fotos" />

    <ImageView
        android:id="@+id/especie_info_foto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/border"
        android:padding="7dp"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_alignTop="@id/especie_info_foto1"
        android:layout_toRightOf="@id/especie_info_foto1" />

    <ImageView
        android:id="@+id/especie_info_foto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/border"
        android:padding="7dp"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_alignTop="@id/especie_info_foto1"
        android:layout_toRightOf="@id/especie_info_foto2" />

    <ImageView
        android:id="@+id/especie_info_foto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/border"
        android:padding="7dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_below="@id/especie_info_foto1"
         />

    <ImageView
        android:id="@+id/especie_info_foto5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/border"
        android:padding="7dp"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_alignTop="@id/especie_info_foto4"
        android:layout_toRightOf="@id/especie_info_foto4" />

    <ImageView
            android:id="@+id/especie_info_foto6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:background="@drawable/border"
            android:padding="7dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:layout_alignTop="@id/especie_info_foto5"
            android:layout_toRightOf="@id/especie_info_foto5" />

    <Button
        android:id="@+id/especie_info_map_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_black"
        style="@style/ButtonText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_map"
        android:drawablePadding="5dip"
        android:text="@string/encyclopedia_especie_info_ver_mapa" />


</RelativeLayout>