<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/estadisticas_fotos_tomadas_lbl"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadisticas_fotos_tomadas_lbl"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estadisticas_fotos_tomadas"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"

            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/estadisticas_fotos_tomadas_lbl" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/estadisticas_fotos_subidas_lbl"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadisticas_fotos_subidas_lbl"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estadisticas_fotos_subidas"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"

            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/estadisticas_fotos_subidas_lbl" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/estadisticas_fotos_compartidas_lbl"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadisticas_fotos_compartidas_lbl"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estadisticas_fotos_compartidas"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"

            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/estadisticas_fotos_compartidas_lbl" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/estadisticas_distancia_recorrida_lbl"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadisticas_distancia_recorrida_lbl"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estadisticas_distancia_recorrida"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"

            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/estadisticas_distancia_recorrida_lbl" />
    </RelativeLayout>
</LinearLayout>